08-operators-in-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mongo.local # add "127.0.0.1 mongo.local" to /etc/hosts 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-svc
            port:
              number: 8081
